<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register Supplier"
                android:textColor="#49b780"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cabang_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cabang"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cabang"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nama_supplier_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nama_supplier"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_supplier"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/alamat_supplier_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/alamat_supplier"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat_supplier"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/kota_suplier_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/kota_supplier"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kota_supplier"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pbf_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pbf"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pbf"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/no_ijin_pbf_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/no_ijin_pbf"
                    android:inputType="number"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_ijin_pbf"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/masa_berlaku_pbf_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingTop="15dp"
                    android:id="@+id/masa_berlaku_pbf"
                    android:text="@string/masa_berlaku_pbf"
                    android:textAlignment="textStart"
                    android:onClick="showDatePickerDialog"
                    android:gravity="start"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/no_siup_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/no_siup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/no_siup"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/masa_berlaku_siup_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingTop="15dp"
                    android:id="@+id/masa_berlaku_siup"
                    android:text="@string/masa_berlaku_siup"
                    android:textAlignment="textStart"
                    android:onClick="showDatePickerDialog"
                    android:gravity="start" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nama_apj_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nama_apj"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_apj"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/no_sika_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/no_sika"
                    android:inputType="number"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_sika"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/masa_berlaku_apj_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingTop="15dp"
                    android:id="@+id/masa_berlaku_apj"
                    android:text="@string/masa_berlaku_apj"
                    android:textAlignment="textStart"
                    android:onClick="showDatePickerDialog"
                    android:gravity="start" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nama_pajak_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nama_pajak"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_pajak"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/npwp_supplier_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/npwp_supplier"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/npwp_supplier"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nama_kontak_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nama_kontak"
                    android:inputType="text"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_kontak"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/telepon_kontak_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telepon_kontak"
                    android:inputType="number"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telepon_kontak"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGISTER"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/register"
                android:onClick="register"
                android:background="#49b780"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>